--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ tqdm==4.64.0
 matplotlib==3.5.3
 scipy==1.9.1
 rasterio==1.3.4
-xgboost==1.7.3
+xgboost
 scikit-learn==1.2.0
 opencv-python-headless
 tensorflow-addons
 validators
-transunet
