Allow for matching preprocessing during evaluation

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ podman-commands
 UNTRACKED/todo.md
 Report/.~lock.Model Data.ods\#
 DatasetHelpers/__pycache__/Dataset.cpython-38.pyc
+podman-commands
